Set datagrid overflow to hidden to prevent double scrolling.

--- a/packages/csvviewer/style/index.css
+++ b/packages/csvviewer/style/index.css
@@ -55,5 +55,5 @@
 
 .jp-CSVViewer-grid {
   flex: 1 1 auto;
-  overflow: auto;
+  overflow: hidden;
 }
